# general_py

./: README.md  index.md  setup.cfg
.github/: FUNDING.yml
src/general_py/: Diseases.json  Lists_1.py  USMLEStudy.py  age_calculator.py  bfs_1.py  binary_tree.py  clickBait.py  dictionaries_1.py  files_txt_str.py  general_funcs.py  knapsack.py  kth_largest.py  machine_deep.py  merge_sorted_array.py  notes.doc  notes.md  piglet_game.py  pygame_game.py  readFromTXTfile.py  readTextFromWeb.py  remove_dupliactes_from_sorted_array.py  remove_element.py  roman_to_integer.py  sdlcIntro.doc  sum_zero_from_3.py  test_general_funcs.py  ursina_game.py  youtube_download.py  ~$lcIntro.doc  ~$notes.doc  ~WRL0642.tmp
src/general_py/Combinatorial_Optimizations/: funcs.py
src/general_py/built_in_methods/: abs.py
