[metadata]
name = general_py-3ud49
version = 0.0.1
author = ""
author_email = ""
description = General python package for python programming
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/odhiambo123/general_py
project_urls = 
    Bug Tracker = https://github.com/odhiambo123/general_py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
